# regex_visualiser

./: .gitignore  Cargo.toml  README.md  Trunk.toml  check.sh
.github/workflows/: pages.yml  rust.yml
docs/: README.md  index.html  regex_visualiser.js  regex_visualiser_bg.wasm
src/: app.rs  lib.rs  main.rs
src/app/: color.rs  colors.rs  layout.rs  loop_vec.rs  parsing.rs  shape.rs  state.rs  text.rs  ui.rs
src/app/ui/: editor.rs  inspector.rs  native.rs  syntax_guide.rs  tab_bar.rs  wasm.rs
src/app/ui/native/: about.rs  menu_bar.rs
src/app/ui/tab_bar/: syntax_guide.rs
src/app/ui/wasm/: banner.rs
wasm/: index.html  manifest.json  sw.js
