[package]
name = "regex_visualiser"
default-run = "regex_visualiser_bin"
version = "0.1.0"
authors = ["Pixelstorm <thepixelstormer@gmail.com>"]
edition = "2021"
rust-version = "1.60"
repository = "https://github.com/Pixelstormer/regex_visualiser/"

[[bin]]
name = "regex_visualiser_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = "0.18.0"
eframe = { version = "0.18.0", features = ["persistence", "dark-light"] }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
regex = "1.6.0"
regex-syntax = "0.6.0"
lazy_static = "1.4.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

# [patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/egui" }
# eframe = { path = "../egui/eframe" }
